# apps/api/src/modules/users/entities/user-profile.entity.ts
@@ -62,4 +62,10 @@ export class UserProfileEntity {
 
   @ApiProperty()
   savedCount: number
+
+  @ApiProperty()
+  followerCount: number
+
+  @ApiPropertyOptional({ nullable: true, type: Boolean })
+  isFollowing: boolean | null
 }
